log/build_2021-04-06_21-17-58/my_py_pkg/stderr.log
  File "/home/sz/ros2_ws/install/my_py_pkg/lib/python3.8/site-packages/my_py_pkg/my_first_node.py", line 14
    self.get_logger().info("Hello"str(self.counter_))
                                  ^
SyntaxError: invalid syntax

